--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -13,6 +13,9 @@
                 background-color: #E0E0E0 !important;
             }
         </style>
+        <script>
+            window.G_RECORDINGS = %%RECORDINGS%%;
+        </script>
     </head>
     <body>
         <div id="mount"></div>
